fix(docs): More spacing on tablet+

--- a/packages/docs/client/app/pages/PDoc/index.styl
+++ b/packages/docs/client/app/pages/PDoc/index.styl
@@ -4,7 +4,10 @@ $page = $UI.media.tablet
   flex 1
 
 .content
-  padding 0 2u
+  padding-left 2u
+  padding-right 2u
   max-width $page
   +tablet()
-    padding 0 4u
+    padding-top 4u
+    padding-left 6u
+    padding-right 6u
